--- a/optimization/Makefile
+++ b/optimization/Makefile
@@ -1,17 +1,20 @@
-all: optexec sixmodes_exec
+all: optexec sixmodes_exec c4vopt_exec
 
 include ${PETSC_DIR}/conf/variables
 include ${PETSC_DIR}/conf/rules
-CLEANFILES = opt.o sixldos.o
+CLEANFILES = opt.o sixldos.o c4vopt.o
 
 optexec: opt.o 
 	$(CLINKER) opt.o -o optexec ${NloptLibPath}/libnlopt.a ${CavityLibPath}/libOPT.a $(PETSC_LIB)
-
 opt: opt.o
 	$(CLINKER) -Wall -g -o $@ opt.o 
 
 sixmodes_exec: sixldos.o
 	$(CLINKER) sixldos.o -o sixmodes_exec ${NloptLibPath}/libnlopt.a ${CavityLibPath}/libOPT.a $(PETSC_LIB)
-
 sixldos: sixldos.o
 	$(CLINKER) -Wall -g -o $@ sixldos.o 
+
+c4vopt_exec: c4vopt.o
+	$(CLINKER) c4vopt.o -o c4vopt_exec ${NloptLibPath}/libnlopt.a ${CavityLibPath}/libOPT.a $(PETSC_LIB)
+c4vopt: c4vopt.o
+	$(CLINKER) -Wall -g -o $@ c4vopt.o 
