--- a/optimization/Makefile
+++ b/optimization/Makefile
@@ -1,8 +1,8 @@
-all: optexec sixmodes_exec c4vopt_exec
+all: optexec sixmodes_exec c4vopt_exec EPopt_exec
 
 include ${PETSC_DIR}/conf/variables
 include ${PETSC_DIR}/conf/rules
-CLEANFILES = opt.o sixldos.o c4vopt.o
+CLEANFILES = opt.o sixldos.o c4vopt.o EPopt.o
 
 optexec: opt.o 
 	$(CLINKER) opt.o -o optexec ${NloptLibPath}/libnlopt.a ${CavityLibPath}/libOPT.a $(PETSC_LIB)
@@ -18,3 +18,8 @@ c4vopt_exec: c4vopt.o
 	$(CLINKER) c4vopt.o -o c4vopt_exec ${NloptLibPath}/libnlopt.a ${CavityLibPath}/libOPT.a $(PETSC_LIB)
 c4vopt: c4vopt.o
 	$(CLINKER) -Wall -g -o $@ c4vopt.o 
+
+EPopt_exec: EPopt.o
+	$(CLINKER) EPopt.o -o EPopt_exec ${NloptLibPath}/libnlopt.a ${CavityLibPath}/libOPT.a $(PETSC_LIB)
+EPopt: EPopt.o
+	$(CLINKER) -Wall -g -o $@ EPopt.o 
