matlab files and separate solver

--- a/optimization/Makefile
+++ b/optimization/Makefile
@@ -1,8 +1,13 @@
-all: optexec sixmodes_exec c4vopt_exec EPopt_exec
+all: optexec sixmodes_exec c4vopt_exec EPopt_exec solver_exec
+
+export PETSC_DIR=/etc/petsc-3.5.3
+export PETSC_ARCH=arch-opt
+export CavityLibPath=~/share/Opt_Cartesian/CodesForLibrary
+export NloptLibPath=/usr/local/lib/
 
 include ${PETSC_DIR}/conf/variables
 include ${PETSC_DIR}/conf/rules
-CLEANFILES = opt.o sixldos.o c4vopt.o EPopt.o
+CLEANFILES = opt.o sixldos.o c4vopt.o EPopt.o solver.o
 
 optexec: opt.o 
 	$(CLINKER) opt.o -o optexec ${NloptLibPath}/libnlopt.a ${CavityLibPath}/libOPT.a $(PETSC_LIB)
@@ -23,3 +28,8 @@ EPopt_exec: EPopt.o
 	$(CLINKER) EPopt.o -o EPopt_exec ${NloptLibPath}/libnlopt.a ${CavityLibPath}/libOPT.a $(PETSC_LIB)
 EPopt: EPopt.o
 	$(CLINKER) -Wall -g -o $@ EPopt.o 
+
+solver_exec: solver.o
+	$(CLINKER) solver.o -o solver_exec ${NloptLibPath}/libnlopt.a ${CavityLibPath}/libOPT.a $(PETSC_LIB)
+solver: solver.o
+	$(CLINKER) -Wall -g -o $@ solver.o 
