--- a/eigen/Makefile
+++ b/eigen/Makefile
@@ -1,12 +1,12 @@
 all: eigenCartesian_exec eigenCartesianEpscomplex_exec
 
-export PETSC_DIR=/etc/petsc-3.5.3
+export PETSC_DIR=/opt/local/petsc-3.6.3
 export PETSC_ARCH=arch-opt
-export SLEPC_DIR=/etc/slepc-3.5.4
+export SLEPC_DIR=/opt/local/slepc-3.6.2
 
-include ${PETSC_DIR}/conf/variables
-include ${PETSC_DIR}/conf/rules
-include ${SLEPC_DIR}/conf/slepc_common
+include ${PETSC_DIR}/lib/petsc/conf/variables
+include ${PETSC_DIR}/lib/petsc/conf/rules
+include ${SLEPC_DIR}/lib/slepc/conf/slepc_common
 CLEANFILES = eigenCartesian.o eigenCartesianEpscomplex.o
 
 eigenCartesian_exec: eigenCartesian.o 
