--- a/optimization/Makefile
+++ b/optimization/Makefile
@@ -1,4 +1,4 @@
-all: optexec sixmodes_exec c4vopt_exec EPopt_exec solver_exec fiber_exec blochdirac_exec degen_exec c4voptvar_exec penalty_exec
+all: optexec sixmodes_exec c4vopt_exec EPopt_exec solver_exec fiber_exec blochdirac_exec degen_exec c4voptvar_exec penalty_exec chiralopt_exec sweepldos_exec sweepfreq_exec
 
 export PETSC_DIR=/opt/local/petsc-3.6.3
 export PETSC_ARCH=arch-opt
@@ -7,7 +7,7 @@ export NloptLibPath=/usr/local/lib/
 
 include ${PETSC_DIR}/lib/petsc/conf/variables
 include ${PETSC_DIR}/lib/petsc/conf/rules
-CLEANFILES = opt.o sixldos.o c4vopt.o EPopt.o solver.o fiber.o blochdirac.o degen.o c4voptvar.o penalty.o
+CLEANFILES = opt.o sixldos.o c4vopt.o EPopt.o solver.o fiber.o blochdirac.o degen.o c4voptvar.o penalty.o chiralopt.o sweepldos.o sweepfreq.o
 
 optexec: opt.o 
 	$(CLINKER) opt.o -o optexec ${NloptLibPath}/libnlopt.a ${CavityLibPath}/libOPT.a $(PETSC_LIB)
@@ -58,3 +58,18 @@ penalty_exec: penalty.o
 	$(CLINKER) penalty.o -o penalty_exec ${NloptLibPath}/libnlopt.a ${CavityLibPath}/libOPT.a $(PETSC_LIB)
 penalty: penalty.o
 	$(CLINKER) -Wall -g -o $@ penalty.o 
+
+chiralopt_exec: chiralopt.o
+	$(CLINKER) chiralopt.o -o chiralopt_exec ${NloptLibPath}/libnlopt.a ${CavityLibPath}/libOPT.a $(PETSC_LIB)
+chiralopt: chiralopt.o
+	$(CLINKER) -Wall -g -o $@ chiralopt.o 
+
+sweepldos_exec: sweepldos.o
+	$(CLINKER) sweepldos.o -o sweepldos_exec ${NloptLibPath}/libnlopt.a ${CavityLibPath}/libOPT.a $(PETSC_LIB)
+sweepldos: sweepldos.o
+	$(CLINKER) -Wall -g -o $@ sweepldos.o 
+
+sweepfreq_exec: sweepfreq.o
+	$(CLINKER) sweepfreq.o -o sweepfreq_exec ${NloptLibPath}/libnlopt.a ${CavityLibPath}/libOPT.a $(PETSC_LIB)
+sweepfreq: sweepfreq.o
+	$(CLINKER) -Wall -g -o $@ sweepfreq.o 
