--- a/CodesForLibrary/Makefile
+++ b/CodesForLibrary/Makefile
@@ -1,4 +1,4 @@
-all: MoperatorGeneral.o MoperatorGeneralBloch_XdL.o SourceGeneration.o PML.o PMLGeneral.o Eps.o MathTools.o MatVecMaker.o Output.o DifferentialOps.o mympisetup.o ldos.o projsimpoverlap.o singleldos.o ldosonly.o filters.o alpha.o FOM.o thgfom_arbitraryPol.o ldosconstraint.o ldoskconstraint.o ldoskconstraintepsomega.o ldoskconstraintnofilter.o ldoskonly.o lens.o c4v.o EP.o eigsolver.o eigsolvertrans.o chiral.o chiral2.o ldoskmaxconstraint.o ldoskminconstraint.o sfg_arbitraryPol.o sfg_singleldos.o sfg_graphene.o c3v.o Qbooster.o
+all: initialize.o MoperatorGeneral.o MoperatorGeneralBloch_XdL.o SourceGeneration.o PML.o PMLGeneral.o Eps.o MathTools.o MatVecMaker.o Output.o DifferentialOps.o mympisetup.o ldos.o projsimpoverlap.o singleldos.o ldosonly.o filters.o alpha.o FOM.o thgfom_arbitraryPol.o ldosconstraint.o ldoskconstraint.o ldoskconstraintepsomega.o ldoskconstraintnofilter.o ldoskonly.o lens.o c4v.o EP.o eigsolver.o eigsolver2.o eigsolvertrans.o chiral.o chiral2.o ldoskmaxconstraint.o ldoskminconstraint.o metasurface.o sfg_arbitraryPol.o sfg_singleldos.o sfg_graphene.o c3v.o Qbooster.o
 
 export PETSC_DIR=/opt/local/petsc-3.6.3
 export PETSC_ARCH=arch-opt
@@ -7,8 +7,10 @@ export SLEPC_DIR=/opt/local/slepc-3.6.2
 include ${PETSC_DIR}/lib/petsc/conf/variables
 include ${PETSC_DIR}/lib/petsc/conf/rules
 include ${SLEPC_DIR}/lib/slepc/conf/slepc_common
-CLEANFILES =  MoperatorGeneral.o MoperatorGeneralBloch_XdL.o SourceGeneration.o PML.o PMLGeneral.o Eps.o MathTools.o MatVecMaker.o Output.o DifferentialOps.o mympisetup.o ldos.o projsimpoverlap.o singleldos.o ldosonly.o filters.o alpha.o FOM.o thgfom_arbitraryPol.o ldosconstraint.o ldoskconstraint.o ldoskconstraintepsomega.o ldoskconstraintnofilter.o ldoskonly.o lens.o c4v.o EP.o eigsolver.o eigsolvertrans.o chiral.o chiral2.o ldoskmaxconstraint.o ldoskminconstraint.o sfg_arbitraryPol.o sfg_singleldos.o sfg_graphene.o c3v.o Qbooster.o
+CLEANFILES =  initialize.o MoperatorGeneral.o MoperatorGeneralBloch_XdL.o SourceGeneration.o PML.o PMLGeneral.o Eps.o MathTools.o MatVecMaker.o Output.o DifferentialOps.o mympisetup.o ldos.o projsimpoverlap.o singleldos.o ldosonly.o filters.o alpha.o FOM.o thgfom_arbitraryPol.o ldosconstraint.o ldoskconstraint.o ldoskconstraintepsomega.o ldoskconstraintnofilter.o ldoskonly.o lens.o c4v.o EP.o eigsolver.o eigsolver2.o eigsolvertrans.o chiral.o chiral2.o ldoskmaxconstraint.o ldoskminconstraint.o metasurface.o sfg_arbitraryPol.o sfg_singleldos.o sfg_graphene.o c3v.o Qbooster.o
 
+initialize: initialize.o
+	$(CLINKER) -Wall -g -o $@ initialize.o  
 MoperatorGeneral: MoperatorGeneral.o
 	$(CLINKER) -Wall -g -o $@ MoperatorGeneral.o  
 MoperatorGeneralBloch: MoperatorGeneralBloch_XdL.o
@@ -65,6 +67,8 @@ EP:EP.o
 	$(CLINKER) -Wall -g -o $@ EP.o
 eigsolver:eigsolver.o
 	$(CLINKER) -Wall -g -o $@ eigsolver.o
+eigsolver2:eigsolver2.o
+	$(CLINKER) -Wall -g -o $@ eigsolver2.o
 eigsolvertrans:eigsolvertrans.o
 	$(CLINKER) -Wall -g -o $@ eigsolvertrans.o
 chiral:chiral.o
@@ -77,6 +81,8 @@ ldoskminconstraint:ldoskminconstraint.o
 	$(CLINKER) -Wall -g -o $@ ldoskminconstraint.o
 sfg_arbitraryPol:sfg_arbitraryPol.o
 	$(CLINKER) -Wall -g -o $@ sfg_arbitraryPol.o
+metasurface:metasurface.o
+	$(CLINKER) -Wall -g -o $@ metasurface.o
 sfg_singleldos:sfg_singleldos.o
 	$(CLINKER) -Wall -g -o $@ sfg_singleldos.o
 sfg_graphene:sfg_graphene.o
@@ -85,3 +91,4 @@ c3v:c3v.o
 	$(CLINKER) -Wall -g -o $@ c3v.o
 Qbooster:Qbooster.o
 	$(CLINKER) -Wall -g -o $@ Qbooster.o
+
